--- a/latex/references.bib
+++ b/latex/references.bib
@@ -67,7 +67,7 @@
 
 @article{zhao2021excalibur,
   title={Excalibur: A Nonparametric, Hierarchical Wavelength Calibration Method for a Precision Spectrograph},
-  author={Zhao, Lily L and Hogg, David W and Bedell, Megan and Fischer, Debra A},
+  author={Zhao, Lily L. and Hogg, David W and Bedell, Megan and Fischer, Debra A},
   journal={The Astronomical Journal},
   volume={161},
   number={2},
@@ -76,9 +76,29 @@
   publisher={IOP Publishing}
 }
 
-@article{yale_data,
+@misc{yale_data,
+  author={Zhao, Lily L. and others},
   title={EXPRES Stellar-Signals Project},
-  author={Lily Zhao and others},
   publisher={Yale University},
-  url={https://exoplanets.astro.yale.edu/science/activity.php},
+  howpublished={\url{https://exoplanets.astro.yale.edu/science/activity.php}},
+  note = {Accessed: 2022-05-15}
 }    
+
+@misc{excalibur_github,
+  author = {Zhao, Lily L.},
+  title = {Excalibur},
+  year = {2020},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/lilylingzhao/excalibur}},
+  note = {Accessed: 2022-05-15}
+}
+
+@book{carroll2017introduction,
+  title={An introduction to modern astrophysics},
+  author={Carroll, Bradley W and Ostlie, Dale A},
+  year={2017},
+  publisher={Cambridge University Press},
+  pages={374},
+  edition={3.}
+}
