--- a/latex/main.tex
+++ b/latex/main.tex
@@ -61,10 +61,10 @@
 % \date{June 2022, University of Copenhagen}
 
 
-\assignment{Bachelor Project}
+\assignment{Bachelor Project of Physics}
 \author{Jakob S. Harteg}
 \title{Laser Frequency Comb Calibrations and \newline Radial Velocity Extractions}
-\subtitle{}
+\subtitle{Computational methods for exoplanet detection.}
 \date{Submitted: June 15, 2022}
 \advisor{Advisor: Troels C. Petersen}
 
@@ -80,7 +80,7 @@
 
 \newpage
 \begin{abstract}
-This project report explores data from The EXtreme PREcision Spectrograph (EXPRES) and explains devised methods for performing laser frequency comb (LFC) wavelength calibrations and radial velocity (RV) extractions from star spectra. For the calibration a per-line rms of 10.0 m/s was reached using a cubic-spline interpolation. \todo{Compare to Excalibur}. Relative radial velocity shifts for four different planets were extracted, although with faulty errors, and coincided within an order of magnitude with the results of Lily L. Zhao et al. \cite{yale_data}. 
+This project report explores data from The EXtreme PREcision Spectrograph (EXPRES) and explains devised methods for performing laser frequency comb (LFC) wavelength calibrations and radial velocity (RV) extractions from star spectra. For the calibration a per-line rms of 10.0 m/s was reached using a cubic-spline interpolation. Relative radial velocity shifts for four different planets were extracted, although with faulty errors, and coincided within an order of magnitude with the results of Lily L. Zhao et al. \cite{yale_data}. 
 \end{abstract}
 
 % Table of contents
@@ -103,7 +103,7 @@ In the beginning of February 2022, Troels C. Petersen (UCPH) and Lars A. Buchhav
 \section{Theory}
 \input{sections/theory} 
 
-\newpage
+% \newpage
 \section{Data Analysis}
 \input{sections/data_analysis} 
 
@@ -111,16 +111,12 @@ In the beginning of February 2022, Troels C. Petersen (UCPH) and Lars A. Buchhav
 \section{Results}
 \input{sections/results} 
 
-% \newpage
+\newpage
 \section{Discussion}
 \input{sections/discussion} 
 
-% \section{Conclusion}
-% % \input{sections/conclusion} 
-
 \section{Acknowledgements}
 \input{sections/acknowledgements} 
-
 
 % Bibliography
 \newpage
